# Game-Of-Life

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/: console.h  dot.h
src/: console.c  dot.c  main.c
